--- a/crates/core/database/Cargo.toml
+++ b/crates/core/database/Cargo.toml
@@ -18,6 +18,7 @@ async-std-runtime = ["async-std", "authifier/async-std-runtime"]
 rocket-impl = ["rocket", "schemars", "revolt_okapi", "revolt_rocket_okapi", "authifier/rocket_impl"]
 axum-impl = ["axum"]
 redis-is-patched = ["revolt-presence/redis-is-patched"]
+voice = ["livekit-api", "livekit-protocol", "livekit-runtime"]
 
 # Default Features
 default = ["mongodb", "async-std-runtime", "tasks"]
@@ -98,6 +99,6 @@ authifier = { version = "1.0.15" }
 amqprs = { version = "1.7.0" }
 
 # Voice
-livekit-api = "0.4.4"
-livekit-protocol = "0.4.0"
-livekit-runtime = { version = "0.3.1", features = ["tokio"] }
+livekit-api = { version = "0.4.4", optional = true}
+livekit-protocol = { version = "0.4.0", optional = true }
+livekit-runtime = { version = "0.3.1", features = ["tokio"], optional = true }
