--- a/crates/delta/Cargo.toml
+++ b/crates/delta/Cargo.toml
@@ -72,6 +72,7 @@ revolt-config = { path = "../core/config" }
 revolt-database = { path = "../core/database", features = [
     "rocket-impl",
     "redis-is-patched",
+    "voice",
 ] }
 revolt-models = { path = "../core/models", features = [
     "schemas",
