--- a/crates/daemons/voice-ingress/Cargo.toml
+++ b/crates/daemons/voice-ingress/Cargo.toml
@@ -36,7 +36,7 @@ async-std = { version = "1.8.0", features = [
 revolt-result = { path = "../../core/result" }
 revolt-models = { path = "../../core/models" }
 revolt-config = { path = "../../core/config" }
-revolt-database = { path = "../../core/database" }
+revolt-database = { path = "../../core/database", features = ["voice"] }
 revolt-permissions = { path = "../../core/permissions" }
 
 # Voice
