--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -17,6 +17,8 @@ jobs:
         with:
           fetch-depth: 0
       - uses: pnpm/action-setup@v4
+        with:
+          package_json_file: ./docs/package.json
       - uses: actions/setup-node@v4
         with:
           node-version: lts/*
