--- a/.github/workflows/rust.yaml
+++ b/.github/workflows/rust.yaml
@@ -18,6 +18,10 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
+      - name: Free up disk space
+        run: |
+          sudo rm -rf /usr/local/lib/android /usr/share/dotnet /opt/ghc
+
       - name: Install latest stable
         uses: actions-rs/toolchain@v1
         with:
