--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -23,6 +23,7 @@ jobs:
         with:
           node-version: lts/*
           cache: pnpm
+          cache-dependency-path: ./docs/pnpm-lock.yaml
 
       - name: Install dependencies
         run: pnpm install
