--- a/.github/workflows/rust.yaml
+++ b/.github/workflows/rust.yaml
@@ -20,7 +20,7 @@ jobs:
       - uses: actions/checkout@8e8c483db84b4bee98b60c0593521ed34d9990e8 # v6.0.1
 
       - name: Install build dependencies
-        run: sudo apt-get update && sudo apt-get install -y build-essential
+        run: sudo apt-get update && sudo apt-get install -y build-essential pkg-config libssl-dev
 
       # Using our own runners for now:
       # - name: Free up disk space
