--- a/.github/workflows/docker.yaml
+++ b/.github/workflows/docker.yaml
@@ -12,8 +12,8 @@ permissions:
   contents: read
   packages: write
 
-concurrency: 
-  group: ${{ github.head_ref }}
+concurrency:
+  group: ${{ github.head_ref || github.ref }}
   cancel-in-progress: true
 
 jobs:
