--- a/crates/core/ratelimits/Cargo.toml
+++ b/crates/core/ratelimits/Cargo.toml
@@ -4,7 +4,7 @@ version = "0.9.4"
 edition = "2024"
 license = "MIT"
 authors = ["Zomatree <me@zomatree.live>", "Paul Makles <me@insrt.uk>"]
-description = "Revolt Backend: Message Parser"
+description = "Revolt Backend: Ratelimit Handler"
 repository = "https://github.com/stoatchat/stoatchat"
 
 [features]
