feat: appeal to the almighty Spamhaus
Signed-off-by: izzy <me@insrt.uk>

--- a/crates/core/database/Cargo.toml
+++ b/crates/core/database/Cargo.toml
@@ -15,7 +15,13 @@ mongodb = ["dep:mongodb", "bson", "authifier/database-mongodb"]
 # ... Other
 tasks = ["isahc", "linkify", "url-escape"]
 async-std-runtime = ["async-std", "authifier/async-std-runtime"]
-rocket-impl = ["rocket", "schemars", "revolt_okapi", "revolt_rocket_okapi", "authifier/rocket_impl"]
+rocket-impl = [
+    "rocket",
+    "schemars",
+    "revolt_okapi",
+    "revolt_rocket_okapi",
+    "authifier/rocket_impl",
+]
 axum-impl = ["axum"]
 redis-is-patched = ["revolt-presence/redis-is-patched"]
 voice = ["livekit-api", "livekit-protocol", "livekit-runtime"]
@@ -93,12 +99,12 @@ revolt_okapi = { version = "0.9.1", optional = true }
 revolt_rocket_okapi = { version = "0.10.0", optional = true }
 
 # Authifier
-authifier = { version = "1.0.15" }
+authifier = { version = "1.0.16" }
 
 # RabbitMQ
 amqprs = { version = "1.7.0" }
 
 # Voice
-livekit-api = { version = "0.4.4", optional = true}
+livekit-api = { version = "0.4.4", optional = true }
 livekit-protocol = { version = "0.4.0", optional = true }
 livekit-runtime = { version = "0.3.1", features = ["tokio"], optional = true }
