fix: Changed local.revolt.chat urls to local.stoat.chat
Signed-off-by: HuntingFighter <huntingfighteroramara@gmail.com>

--- a/crates/core/config/Revolt.toml
+++ b/crates/core/config/Revolt.toml
@@ -14,11 +14,11 @@ redis = "redis://redis/"
 # See https://github.com/revoltchat/self-hosted/blob/master/Caddyfile
 #
 # Remember to change these to https/wss where appropriate in production!
-app = "http://local.revolt.chat"
-api = "http://local.revolt.chat/api"
-events = "ws://local.revolt.chat/ws"
-autumn = "http://local.revolt.chat/autumn"
-january = "http://local.revolt.chat/january"
+app = "http://local.stoat.chat"
+api = "http://local.stoat.chat/api"
+events = "ws://local.stoat.chat/ws"
+autumn = "http://local.stoat.chat/autumn"
+january = "http://local.stoat.chat/january"
 voso_legacy = ""
 voso_legacy_ws = ""
 
