feat(gifbox): expose gifbox URL and attribution in API config
Signed-off-by: dorkian-gray <jonathan@brias.co>

--- a/Revolt.toml
+++ b/Revolt.toml
@@ -1,6 +1,8 @@
 # ⚠️ This configuration is intended for development environment.
 # If you'd like to override anything, create a Revolt.overrides.toml
 
+gifbox_attribution = ""
+
 [database]
 # MongoDB connection URL
 # Defaults to the container name specified in self-hosted
